# OrderCheckingApp

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile.base  Jenkinsfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: main_workflow.yaml
myStore/: Dockerfile  entrypoint.sh  manage.py
myStore/frontend/: angular.json  package-lock.json  package.json
myStore/frontend/src/: colors.scss  index.html  styles.scss
myStore/frontend/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.module.ts
myStore/myStore/: asgi.py  settings.py  urls.py  wsgi.py
myStore/myStoreBackend/: apps.py  models.py
