[tool.poetry]
name = "mystore"
version = "0.1.0"
description = "Online webApp to keep track of a Store's Orders"
authors = ["Konstantinos Amplianitis <amplianitiskonstantinos@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.4"
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
psycopg = "^3.1.9"
pytest = "^7.4.0"
django-rest-swagger = "^2.2.0"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.7"
pre-commit = "^3.3.3"
bandit = "^1.7.5"
safety = "^2.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
